jakieś małe poprawki wizualne